--- a/lcl/languages/lclstrconsts.sk.po
+++ b/lcl/languages/lclstrconsts.sk.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: lclstrconsts\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2008-02-02 16:22+0100\n"
-"PO-Revision-Date: 2024-09-04 13:59+0200\n"
+"PO-Revision-Date: 2025-07-23 14:34+0200\n"
 "Last-Translator: Slavo Gbúr <slavusec@azet.sk>\n"
 "Language-Team: Slovenský <sk@li.org>\n"
 "Language: sk\n"
@@ -33,10 +33,9 @@ msgid "Unable to find a HTML browser."
 msgstr "Nie je možné nájsť prehliadač HTML."
 
 #: lclstrconsts.hhshelpnohtmlbrowserfoundpleasedefineone
-#, object-pascal-format, fuzzy
-#| msgid "No HTML Browser found.%sPlease define one in Tools -> Options -> Help -> Help Options"
+#, object-pascal-format
 msgid "No HTML Browser found.%sPlease define one in Tools -> Options -> Help -> Help Options."
-msgstr "HTML prehliadač nebol nájdený.%sProsím zadajte jeden v Nástroje -> Možnosti -> Pomoc -> Možnosti pomoci"
+msgstr "HTML prehliadač nebol nájdený.%sProsím zadajte jeden v Nástroje -> Možnosti -> Pomoc -> Možnosti pomoci."
 
 #: lclstrconsts.hhshelpthehelpdatabasewasunabletofindfile
 #, object-pascal-format
@@ -175,8 +174,6 @@ msgid "Cancel"
 msgstr "Zrušiť"
 
 #: lclstrconsts.rscannotfocus
-#, fuzzy
-#| msgid "Can not focus"
 msgid "Cannot focus"
 msgstr "Nemožno zamerať"
 
@@ -519,10 +516,9 @@ msgid "Help"
 msgstr "Pomoc"
 
 #: lclstrconsts.rshelpalreadyregistered
-#, object-pascal-format, fuzzy
-#| msgid "%s: Already registered"
+#, object-pascal-format
 msgid "%s: already registered."
-msgstr "%s: Už je registrovaný"
+msgstr "%s: už je registrovaný."
 
 #: lclstrconsts.rshelpcontextnotfound
 msgid "A help database was found for this topic, but this topic was not found"
@@ -547,16 +543,14 @@ msgid "Help context %s not found in Database \"%s\"."
 msgstr "Kontextová pomoc %s nenájdená v databáze \"%s\"."
 
 #: lclstrconsts.rshelphelpdatabasedidnotfoundaviewerforahelppageoftype
-#, object-pascal-format, fuzzy
-#| msgid "Help Database \"%s\" did not find a viewer for a help page of type %s"
+#, object-pascal-format
 msgid "Help Database \"%s\" did not find a viewer for a help page of type %s."
-msgstr "Databáza pomoci \"%s\" nenašla zobrazovač pre stránku pomocníka typu %s"
+msgstr "Databáza pomoci \"%s\" nenašla zobrazovač pre stránku pomocníka typu %s."
 
 #: lclstrconsts.rshelphelpdatabasenotfound
-#, object-pascal-format, fuzzy
-#| msgid "Help Database \"%s\" not found"
+#, object-pascal-format
 msgid "Help Database \"%s\" not found."
-msgstr "Databáza pomoci \"%s\" nenájdená"
+msgstr "Databáza pomoci \"%s\" nenájdená."
 
 #: lclstrconsts.rshelphelpfordirectivenotfound
 #, object-pascal-format
@@ -579,10 +573,9 @@ msgid "Help keyword \"%s\" not found in Database \"%s\"."
 msgstr "Kľúčové slovo pomoci \"%s\" nenájdené v databáze \"%s\"."
 
 #: lclstrconsts.rshelphelpnodehasnohelpdatabase
-#, object-pascal-format, fuzzy
-#| msgid "Help node \"%s\" has no Help Database"
+#, object-pascal-format
 msgid "Help node \"%s\" has no Help Database."
-msgstr "Uzol pomocníka \"%s\" nemá databázu pomocníka"
+msgstr "Uzol pomocníka \"%s\" nemá databázu pomocníka."
 
 #: lclstrconsts.rshelpnohelpfoundforsource
 #, object-pascal-format
@@ -590,30 +583,26 @@ msgid "No help found for line %d, column %d of %s."
 msgstr "Nenájdený pomocník pre riadok %d, stĺpec %d %s."
 
 #: lclstrconsts.rshelpnohelpnodesavailable
-#, fuzzy
-#| msgid "No help entries available for this topic"
 msgid "No help entries available for this topic."
-msgstr "Pre túto tému nie sú k dispozícii žiadne položky pomoci"
+msgstr "Pre túto tému nie sú k dispozícii žiadne položky pomoci."
 
 #: lclstrconsts.rshelpnotfound
 msgid "No help found for this topic"
 msgstr "Pre túto tému nebola nájdená pomoc"
 
 #: lclstrconsts.rshelpnotregistered
-#, object-pascal-format, fuzzy
-#| msgid "%s: Not registered"
+#, object-pascal-format
 msgid "%s: not registered."
-msgstr "%s: Neregistrovaný"
+msgstr "%s: Neregistrovaný."
 
 #: lclstrconsts.rshelpselectorerror
 msgid "Help Selector Error"
 msgstr "Chyba selektora pomoci"
 
 #: lclstrconsts.rshelpthereisnoviewerforhelptype
-#, object-pascal-format, fuzzy
-#| msgid "There is no viewer for help type \"%s\""
+#, object-pascal-format
 msgid "There is no viewer for help type \"%s\"."
-msgstr "Nie je zobrazovač pre pomoc typu \"%s\""
+msgstr "Nie je zobrazovač pre pomoc typu \"%s\"."
 
 #: lclstrconsts.rshelpviewererror
 msgid "Help Viewer Error"
@@ -1282,10 +1271,9 @@ msgid "Yellow"
 msgstr "Žltá"
 
 #: lclstrconsts.scannotfocus
-#, object-pascal-format, fuzzy, badformat
-#| msgid "Cannot focus a disabled or invisible window"
+#, object-pascal-format
 msgid "Cannot focus a disabled or invisible window \"%s\""
-msgstr "Nemôžem zamerať vypnuté alebo neviditeľné okno"
+msgstr "Nemôžem zaostriť zakázané alebo neviditeľné okno \"%s\""
 
 #: lclstrconsts.sduplicatemenus
 msgid "Duplicate menus"
@@ -1468,12 +1456,12 @@ msgstr "%s bytov"
 
 #: lclstrconsts.sshellctrlsfolder
 msgid "Folder"
-msgstr ""
+msgstr "Priečinok"
 
 #: lclstrconsts.sshellctrlsgb
 #, object-pascal-format
 msgid "%s GB"
-msgstr ""
+msgstr "%s GB"
 
 #: lclstrconsts.sshellctrlsinvalidpath
 #, object-pascal-format
