--- a/components/synedit/languages/syneditstrconst.ru.po
+++ b/components/synedit/languages/syneditstrconst.ru.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: lazaruside\n"
 "POT-Creation-Date: \n"
-"PO-Revision-Date: 2025-07-23 01:04+0300\n"
+"PO-Revision-Date: 2025-07-23 17:00+0300\n"
 "Last-Translator: Maxim Ganetsky <maxkill@mail.ru>\n"
 "Language-Team: \n"
 "Language: ru\n"
@@ -385,7 +385,7 @@ msgstr "Инструкция обработки"
 
 #: syneditstrconst.syns_attrprocessinginstrsym
 msgid "Processing Instruction Symbol"
-msgstr ""
+msgstr "Символ инструкции обработки"
 
 #: syneditstrconst.syns_attrpropertyname
 msgid "Property name"
