--- a/components/synedit/languages/syneditstrconst.ru.po
+++ b/components/synedit/languages/syneditstrconst.ru.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: lazaruside\n"
 "POT-Creation-Date: \n"
-"PO-Revision-Date: 2025-07-23 17:00+0300\n"
+"PO-Revision-Date: 2025-07-23 17:40+0300\n"
 "Last-Translator: Maxim Ganetsky <maxkill@mail.ru>\n"
 "Language-Team: \n"
 "Language: ru\n"
@@ -305,15 +305,15 @@ msgstr "Значение атрибута пространства имён"
 
 #: syneditstrconst.syns_attrnamespacecolon
 msgid "Namespace Colon"
-msgstr ""
+msgstr "Двоеточие пространства имён"
 
 #: syneditstrconst.syns_attrnamespaceidentdef
 msgid "Namespace Ident Definition"
-msgstr ""
+msgstr "Идентификатор в объявлении пространства имён"
 
 #: syneditstrconst.syns_attrnamespaceidentprefix
 msgid "Namespace Ident Prefix"
-msgstr ""
+msgstr "Идентификатор-префикс пространства имён"
 
 #: syneditstrconst.syns_attrnewfile
 msgid "Diff New File"
