IDE/IDEUtils: regenerated translations and updated Russian translation

--- a/ide/packages/ideutils/languages/ideutilspkgstrconsts.ru.po
+++ b/ide/packages/ideutils/languages/ideutilspkgstrconsts.ru.po
@@ -301,6 +301,10 @@ msgstr "Итальянский"
 msgid "Japanese"
 msgstr "Японский"
 
+#: ideutilspkgstrconsts.rslanguagekorean
+msgid "Korean"
+msgstr "Корейский"
+
 #: ideutilspkgstrconsts.rslanguagelithuanian
 msgid "Lithuanian"
 msgstr "Литовский"
