--- a/components/pochecker/languages/pocheckerconsts.ru.po
+++ b/components/pochecker/languages/pocheckerconsts.ru.po
@@ -79,6 +79,10 @@ msgstr "Итальянский"
 msgid "Japanese"
 msgstr "Японский"
 
+#: pocheckerconsts.rs_lang_ko
+msgid "Korean"
+msgstr "Корейский"
+
 #: pocheckerconsts.rs_lang_lt
 msgid "Lithuanian"
 msgstr "Литовский"
