--- a/components/charactermap/languages/charactermapfrm.ru.po
+++ b/components/charactermap/languages/charactermapfrm.ru.po
@@ -1,23 +1,23 @@
 msgid ""
 msgstr ""
-"Content-Type: text/plain; charset=UTF-8\n"
 "Project-Id-Version: \n"
 "POT-Creation-Date: \n"
 "PO-Revision-Date: \n"
 "Last-Translator: Maxim Ganetsky <maxkill@mail.ru>\n"
 "Language-Team: \n"
-"MIME-Version: 1.0\n"
-"Content-Transfer-Encoding: 8bit\n"
 "Language: ru\n"
-"X-Generator: Poedit 2.4.3\n"
+"MIME-Version: 1.0\n"
+"Content-Type: text/plain; charset=UTF-8\n"
+"Content-Transfer-Encoding: 8bit\n"
+"X-Generator: Poedit 3.5\n"
 
 #: charactermapfrm.lisbmponly
 msgid "BMP Only"
-msgstr ""
+msgstr "Только BMP"
 
 #: charactermapfrm.lisbmponlyhint
 msgid "Basic Multilingual Plane Only"
-msgstr ""
+msgstr "Только основная многоязычная плоскость (BMP)"
 
 #: charactermapfrm.lischaractermap
 msgid "Character Map"
@@ -41,7 +41,7 @@ msgstr "Диапазон"
 
 #: charactermapfrm.lisscript
 msgid "Script"
-msgstr ""
+msgstr "Набор символов"
 
 #: charactermapfrm.lissortunicoderangelistalphabetically
 msgid "Sort Unicode range list alphabetically"
