--- a/examples/lazresexplorer/languages/resexplorer.de.po
+++ b/examples/lazresexplorer/languages/resexplorer.de.po
@@ -1,36 +1,38 @@
 msgid ""
 msgstr ""
-"Content-Type: text/plain; charset=UTF-8\n"
 "Project-Id-Version: \n"
 "POT-Creation-Date: \n"
 "PO-Revision-Date: \n"
 "Last-Translator: Swen Heinig <swen.heinig@freenet.de>\n"
 "Language-Team: \n"
+"Language: de\n"
 "MIME-Version: 1.0\n"
+"Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"X-Generator: Poedit 3.6\n"
 
 #: reconstsunit.sabout
-#, fuzzy
-#| msgid "About..."
 msgid "About ..."
 msgstr "Über..."
 
 #: reconstsunit.sallfilesexcutablefilesexeexedlldlldll
 msgid "All files (*.*)|*.*|Excutable files (*.exe)|*.exe|DLL (*.dll)|*.dll"
-msgstr ""
+msgstr "Alle Dateien (*.*)|*.*|Ausführbare Dateien (*.exe)|*.exe|DLL(*.dll)|*.dll"
 
 #: reconstsunit.sallfilessharedlibsoso
 msgid "All files (*)|*|Shared libraries (*.so)|*.so"
-msgstr ""
+msgstr "Alle Dateien (*)|Bibliotheksdateien (*.so)|*.so"
 
 #: reconstsunit.sbuilddate
-#, fuzzy
-#| msgid "Build date : "
 msgid "Build date: "
-msgstr "Build-Datum :"
+msgstr "Build-Datum: "
 
 #: reconstsunit.scarbonwidgetset
 msgid "Carbon widget set"
+msgstr ""
+
+#: reconstsunit.scocoawidgetset
+msgid "Cocoa widget set"
 msgstr ""
 
 #: reconstsunit.sexit
@@ -42,22 +44,28 @@ msgid "File"
 msgstr "Datei"
 
 #: reconstsunit.sfpcversion
-#, fuzzy
-#| msgid "FPC version : "
 msgid "FPC version: "
-msgstr "FPC-Version :"
+msgstr "FPC-Version: "
 
 #: reconstsunit.sfpguiwidgetset
 msgid "FpGUI widget set"
 msgstr ""
 
 #: reconstsunit.sgtk2widgetset
-msgid "GTK 2 widget set"
+msgid "GTK2 widget set"
+msgstr ""
+
+#: reconstsunit.sgtk3widgetset
+msgid "GTK3 widget set"
 msgstr ""
 
 #: reconstsunit.sgtkwidgetset
 msgid "GTK widget set"
 msgstr ""
+
+#: reconstsunit.sheight
+msgid "Height:"
+msgstr "Höhe:"
 
 #: reconstsunit.shelp
 msgid "Help"
@@ -67,22 +75,49 @@ msgstr "Hilfe"
 msgid "Image"
 msgstr "Bild"
 
+#: reconstsunit.simageindex
+msgid "Image index:"
+msgstr "Bild-Index:"
+
+#: reconstsunit.sindexofcount
+#, object-pascal-format
+msgid "%d of %d"
+msgstr "%d von %d"
+
 #: reconstsunit.slclversion
 msgid "LCL Version: "
-msgstr "LCL-Version:"
+msgstr "LCL-Version: "
 
 #: reconstsunit.slicense
 msgid "This program is free software under GNU GPL 2 license, see COPYING file"
-msgstr ""
+msgstr "Dieses Programm ist freie Software unter der GNU GPL 2 Lizenz, siehe Datei COPYING"
+
+#: reconstsunit.snextimage
+msgid "Next image"
+msgstr "Nächstes Bild"
 
 #: reconstsunit.sopen
-#, fuzzy
-#| msgid "Open..."
 msgid "Open ..."
-msgstr "Öffnen..."
+msgstr "Öffnen ..."
 
 #: reconstsunit.sotherguiwidgetset
 msgid "Other gui"
+msgstr ""
+
+#: reconstsunit.spixelformat
+msgid "Pixel format:"
+msgstr "Pixel-Format:"
+
+#: reconstsunit.sprevimage
+msgid "Previous image"
+msgstr "Voriges Bild"
+
+#: reconstsunit.sqt5widgetset
+msgid "QT5 widget set"
+msgstr ""
+
+#: reconstsunit.sqt6widgetset
+msgid "QT6 widget set"
 msgstr ""
 
 #: reconstsunit.sqtwidgetset
@@ -91,31 +126,31 @@ msgstr ""
 
 #: reconstsunit.sresourceexplorer
 msgid "Resource explorer"
-msgstr ""
+msgstr "Ressource-Explorer"
 
 #: reconstsunit.sresources
 msgid "Resources"
-msgstr ""
+msgstr "Ressourcen"
 
 #: reconstsunit.ssaveresource
 msgid "Save resource ..."
-msgstr ""
+msgstr "Ressource speichern ..."
 
 #: reconstsunit.sstrings
 msgid "Strings"
-msgstr ""
+msgstr "Strings"
 
 #: reconstsunit.stargetcpu
-#, fuzzy
-#| msgid "Target CPU : "
 msgid "Target CPU: "
-msgstr "Ziel-CPU :"
+msgstr "Ziel-CPU: "
 
 #: reconstsunit.stargetos
-#, fuzzy
-#| msgid "Target OS : "
 msgid "Target OS: "
-msgstr "Ziel-OS :"
+msgstr "Ziel-OS: "
+
+#: reconstsunit.swidth
+msgid "Width:"
+msgstr "Breite:"
 
 #: reconstsunit.swin32_64widgetset
 msgid "Win32/Win64 widget set"
