--- a/ide/packages/ideutils/languages/ideutilspkgstrconsts.nl.po
+++ b/ide/packages/ideutils/languages/ideutilspkgstrconsts.nl.po
@@ -41,6 +41,18 @@ msgstr ""
 msgid "Error saving %s to%s%s%s%s"
 msgstr ""
 
+#: ideutilspkgstrconsts.liserrorupdatingfrom
+#, object-pascal-format
+msgid ""
+"Error updating\n"
+"%s\n"
+"from\n"
+"%s.\n"
+"\n"
+"Error message:\n"
+"%s"
+msgstr ""
+
 #: ideutilspkgstrconsts.lisfiledoesnotlooklikeatextfileopenitanyway
 #, object-pascal-format, fuzzy
 #| msgid "File %s%s%s%sdoes not look like a text file.%sOpen it anyway?"
