--- a/ide/packages/ideutils/languages/ideutilspkgstrconsts.zh_CN.po
+++ b/ide/packages/ideutils/languages/ideutilspkgstrconsts.zh_CN.po
@@ -43,6 +43,18 @@ msgstr "加载 %s 时出错从 %s%s%s%s"
 msgid "Error saving %s to%s%s%s%s"
 msgstr "保存 %s 到 %s 时出错 %s%s%s"
 
+#: ideutilspkgstrconsts.liserrorupdatingfrom
+#, object-pascal-format
+msgid ""
+"Error updating\n"
+"%s\n"
+"from\n"
+"%s.\n"
+"\n"
+"Error message:\n"
+"%s"
+msgstr ""
+
 #: ideutilspkgstrconsts.lisfiledoesnotlooklikeatextfileopenitanyway
 #, object-pascal-format
 msgid "File \"%s\"%sdoes not look like a text file.%sOpen it anyway?"
