--- a/ide/packages/ideutils/languages/ideutilspkgstrconsts.fi.po
+++ b/ide/packages/ideutils/languages/ideutilspkgstrconsts.fi.po
@@ -40,6 +40,18 @@ msgstr "Virhe ladattaessa %s täältä:%s%s%s%s"
 msgid "Error saving %s to%s%s%s%s"
 msgstr "Virhe tallennettaessa %s tänne:%s%s%s%s"
 
+#: ideutilspkgstrconsts.liserrorupdatingfrom
+#, object-pascal-format
+msgid ""
+"Error updating\n"
+"%s\n"
+"from\n"
+"%s.\n"
+"\n"
+"Error message:\n"
+"%s"
+msgstr ""
+
 #: ideutilspkgstrconsts.lisfiledoesnotlooklikeatextfileopenitanyway
 #, object-pascal-format
 msgid "File \"%s\"%sdoes not look like a text file.%sOpen it anyway?"
