--- a/ide/packages/ideutils/languages/ideutilspkgstrconsts.hu.po
+++ b/ide/packages/ideutils/languages/ideutilspkgstrconsts.hu.po
@@ -40,6 +40,18 @@ msgstr "Hiba %s innen történő betöltése közben:%s%s%s%s"
 msgid "Error saving %s to%s%s%s%s"
 msgstr "Hiba %s ide történő mentése közben:%s%s%s%s"
 
+#: ideutilspkgstrconsts.liserrorupdatingfrom
+#, object-pascal-format
+msgid ""
+"Error updating\n"
+"%s\n"
+"from\n"
+"%s.\n"
+"\n"
+"Error message:\n"
+"%s"
+msgstr ""
+
 #: ideutilspkgstrconsts.lisfiledoesnotlooklikeatextfileopenitanyway
 #, object-pascal-format
 msgid "File \"%s\"%sdoes not look like a text file.%sOpen it anyway?"
