--- a/ide/packages/ideutils/languages/ideutilspkgstrconsts.ja.po
+++ b/ide/packages/ideutils/languages/ideutilspkgstrconsts.ja.po
@@ -40,6 +40,18 @@ msgstr "%s%s%s%sからの%sの読み込み中にエラー"
 msgid "Error saving %s to%s%s%s%s"
 msgstr "%s%s%s%sを%sに保存中にエラー"
 
+#: ideutilspkgstrconsts.liserrorupdatingfrom
+#, object-pascal-format
+msgid ""
+"Error updating\n"
+"%s\n"
+"from\n"
+"%s.\n"
+"\n"
+"Error message:\n"
+"%s"
+msgstr ""
+
 #: ideutilspkgstrconsts.lisfiledoesnotlooklikeatextfileopenitanyway
 #, object-pascal-format
 msgid "File \"%s\"%sdoes not look like a text file.%sOpen it anyway?"
