--- a/languages/lazaruside.ca.po
+++ b/languages/lazaruside.ca.po
@@ -2298,7 +2298,7 @@ msgid "Fppkg configuration file (e.g. fppkg.cfg)"
 msgstr ""
 
 #: lazarusidestrconsts.dlgframecolor
-msgid "Text-mark"
+msgid "Text mark"
 msgstr ""
 
 #: lazarusidestrconsts.dlgfrmeditor
@@ -2848,13 +2848,17 @@ msgstr "Marge i canal"
 msgid "Marker color"
 msgstr "Color del marcador"
 
+#: lazarusidestrconsts.dlgmarkupalloverviewgutter
+msgid "Overview gutter"
+msgstr ""
+
 #: lazarusidestrconsts.dlgmarkupcurrentworddelayinsec
 #, object-pascal-format
 msgid "(%s sec delay after caret move)"
 msgstr ""
 
 #: lazarusidestrconsts.dlgmarkupfoldcolor
-msgid "Vertical-mark"
+msgid "Vertical mark"
 msgstr ""
 
 #: lazarusidestrconsts.dlgmarkupgroup
@@ -4533,7 +4537,7 @@ msgid "Directory for building test projects"
 msgstr "Directori per a muntar els projectes de prova"
 
 #: lazarusidestrconsts.dlgtextstyle
-msgid "Text-Style"
+msgid "Text Style"
 msgstr ""
 
 #: lazarusidestrconsts.dlgtexttofind
