--- a/languages/lazaruside.hu.po
+++ b/languages/lazaruside.hu.po
@@ -2263,7 +2263,9 @@ msgid "Fppkg configuration file (e.g. fppkg.cfg)"
 msgstr "Fppkg beállítási fájl (pl. fppkg.cfg)"
 
 #: lazarusidestrconsts.dlgframecolor
-msgid "Text-mark"
+#, fuzzy
+#| msgid "Text-mark"
+msgid "Text mark"
 msgstr "Kiemelés"
 
 #: lazarusidestrconsts.dlgfrmeditor
@@ -2799,13 +2801,19 @@ msgstr "Margó és hasábköz"
 msgid "Marker color"
 msgstr "Jelző színe"
 
+#: lazarusidestrconsts.dlgmarkupalloverviewgutter
+msgid "Overview gutter"
+msgstr ""
+
 #: lazarusidestrconsts.dlgmarkupcurrentworddelayinsec
 #, object-pascal-format
 msgid "(%s sec delay after caret move)"
 msgstr ""
 
 #: lazarusidestrconsts.dlgmarkupfoldcolor
-msgid "Vertical-mark"
+#, fuzzy
+#| msgid "Vertical-mark"
+msgid "Vertical mark"
 msgstr "Függőleges jelző"
 
 #: lazarusidestrconsts.dlgmarkupgroup
@@ -4460,7 +4468,9 @@ msgid "Directory for building test projects"
 msgstr "Könyvtár a teszt projektek építéséhez"
 
 #: lazarusidestrconsts.dlgtextstyle
-msgid "Text-Style"
+#, fuzzy
+#| msgid "Text-Style"
+msgid "Text Style"
 msgstr "Szövegstílus"
 
 #: lazarusidestrconsts.dlgtexttofind
