--- a/languages/lazaruside.it.po
+++ b/languages/lazaruside.it.po
@@ -2330,7 +2330,9 @@ msgid "Fppkg configuration file (e.g. fppkg.cfg)"
 msgstr ""
 
 #: lazarusidestrconsts.dlgframecolor
-msgid "Text-mark"
+#, fuzzy
+#| msgid "Text-mark"
+msgid "Text mark"
 msgstr "Marcatesto"
 
 #: lazarusidestrconsts.dlgfrmeditor
@@ -2880,13 +2882,17 @@ msgstr "Margini e spaziatura laterale"
 msgid "Marker color"
 msgstr "Colore marker"
 
+#: lazarusidestrconsts.dlgmarkupalloverviewgutter
+msgid "Overview gutter"
+msgstr ""
+
 #: lazarusidestrconsts.dlgmarkupcurrentworddelayinsec
 #, object-pascal-format
 msgid "(%s sec delay after caret move)"
 msgstr ""
 
 #: lazarusidestrconsts.dlgmarkupfoldcolor
-msgid "Vertical-mark"
+msgid "Vertical mark"
 msgstr ""
 
 #: lazarusidestrconsts.dlgmarkupgroup
@@ -4566,7 +4572,7 @@ msgid "Directory for building test projects"
 msgstr "Cartella per costruire progetti di test"
 
 #: lazarusidestrconsts.dlgtextstyle
-msgid "Text-Style"
+msgid "Text Style"
 msgstr ""
 
 #: lazarusidestrconsts.dlgtexttofind
