--- a/languages/lazaruside.he.po
+++ b/languages/lazaruside.he.po
@@ -2355,7 +2355,9 @@ msgid "Fppkg configuration file (e.g. fppkg.cfg)"
 msgstr ""
 
 #: lazarusidestrconsts.dlgframecolor
-msgid "Text-mark"
+#, fuzzy
+#| msgid "Text-mark"
+msgid "Text mark"
 msgstr "צבע הטקסט"
 
 #: lazarusidestrconsts.dlgfrmeditor
@@ -2923,13 +2925,17 @@ msgstr "שוליים וקווי עזר"
 msgid "Marker color"
 msgstr "צבע הסמן"
 
+#: lazarusidestrconsts.dlgmarkupalloverviewgutter
+msgid "Overview gutter"
+msgstr ""
+
 #: lazarusidestrconsts.dlgmarkupcurrentworddelayinsec
 #, object-pascal-format
 msgid "(%s sec delay after caret move)"
 msgstr ""
 
 #: lazarusidestrconsts.dlgmarkupfoldcolor
-msgid "Vertical-mark"
+msgid "Vertical mark"
 msgstr ""
 
 #: lazarusidestrconsts.dlgmarkupgroup
@@ -4645,7 +4651,7 @@ msgid "Directory for building test projects"
 msgstr "תיקייה לבניית פרוייקטים לנסיון"
 
 #: lazarusidestrconsts.dlgtextstyle
-msgid "Text-Style"
+msgid "Text Style"
 msgstr ""
 
 #: lazarusidestrconsts.dlgtexttofind
